--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@flyerhq/react-native-link-preview": "1.6.0",
     "@react-native-clipboard/clipboard": "1.11.2",
+    "@react-native-community/netinfo": "9.4.1",
     "@react-native-firebase/app": "18.1.0",
     "@react-native-firebase/crashlytics": "18.1.0",
     "@react-navigation/bottom-tabs": "6.5.8",
@@ -30,6 +31,7 @@
     "@react-navigation/stack": "6.3.17",
     "@shopify/flash-list": "1.4.3",
     "advanced-html-parser": "1.1.0",
+    "axios": "1.4.0",
     "front-matter": "4.0.2",
     "html-escaper": "3.0.3",
     "moti": "0.25.3",
